Fixed responsiveness on smartphones. When loading the index.html page on tablets, there is a problem with the scale and the resolution of the visible screen increases until all the effects are finished.

--- a/style.css
+++ b/style.css
@@ -572,7 +572,8 @@ button:hover {
 .undergatesButton {
   position: absolute;
   top: 90%;
-  right: 44%;
+  right: 5%;
+  margin: 0 auto;
   animation: slidebutton 1s forwards 0s, slidebuttonup 1s forwards 2s;
 }
 
@@ -613,6 +614,245 @@ button:hover {
 
   .undergatesText {
     transform: translateY(1840%);
+  }
+}
+
+@media screen and (max-width: 1200px), screen and (max-height: 600px) {
+  .line-1 {
+    font-size: 350%;
+  }
+
+  .line-2 {
+    font-size: 110%;
+    margin-top: 15px;
+  }
+
+  .line-3 {
+    font-size: 250%;
+    margin-top: 15px;
+  }
+
+  .gates {
+    left: 32%;
+    top: 20%;
+    width: 400px;
+    height: 400px;
+  }
+  @keyframes mymove {
+    from {
+      left: 32%;
+    }
+    to {
+      left: 8%;
+    }
+  }
+
+  .photoCV {
+    /* padding-top: 5vw; */
+    transform: translateY(35%);
+    top: 20%;
+  }
+  .photoCV img {
+    height: 220;
+  }
+
+  @keyframes slidein {
+    from {
+      right: -130%;
+    }
+
+    to {
+      right: 12%;
+    }
+  }
+
+  @keyframes slideup {
+    from {
+      top: 20%;
+    }
+
+    to {
+      top: 0%;
+    }
+  }
+
+  .undergatesText {
+    font-size: 110%;
+    transform: translateY(1650%);
+  }
+}
+
+/* @media screen and (max-height: 600px) {
+  .undergatesText {
+    font-size: 110%;
+    transform: translateY(150%);
+  }
+
+} */
+
+@media screen and (max-width: 800px) {
+  .line-1 {
+    font-size: 280%;
+  }
+
+  .line-2 {
+    font-size: 80%;
+    margin-top: 15px;
+  }
+
+  .line-3 {
+    font-size: 180%;
+    margin-top: 15px;
+  }
+
+  .gates {
+    left: 24%;
+    top: 15%;
+    width: 400px;
+    height: 400px;
+  }
+  @keyframes mymove {
+    from {
+      left: 24%;
+    }
+    to {
+      left: 0%;
+    }
+  }
+
+  .photoCV {
+    /* padding-top: 5vw; */
+    transform: translateY(55%);
+    top: 15%;
+  }
+  .photoCV img {
+    height: 180;
+  }
+
+  @keyframes slidein {
+    from {
+      right: -130%;
+    }
+
+    to {
+      right: 12%;
+    }
+  }
+
+  @keyframes slideup {
+    from {
+      top: 15%;
+    }
+
+    to {
+      top: 1%;
+    }
+  }
+
+  .undergatesText {
+    transform: translateY(1540%);
+    font-size: 110%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .line-1 {
+    font-size: 150%;
+  }
+
+  .line-2 {
+    font-size: 80%;
+    margin-top: 15px;
+  }
+
+  .line-3 {
+    font-size: 150%;
+    margin-top: 15px;
+  }
+
+  .gates {
+    left: 28%;
+    top: 35%;
+    width: 150px;
+    height: 150px;
+    transform: translateY(-55%);
+  }
+  @keyframes mymove {
+    from {
+      top: 35%;
+    }
+    to {
+      top: 25%;
+    }
+  }
+
+  .photoCV {
+    /* padding-top: 5vw; */
+    transform: translateY(55%);
+    top: 25%;
+    left: 24%;
+    opacity: 0;
+    animation: none;
+    animation: showup 3s forwards 6.8s, slideup 1s 10.5s forwards;
+  }
+  .photoCV img {
+    height: 180;
+  }
+
+  @keyframes showup {
+    from {
+      opacity: 0;
+    }
+
+    to {
+      opacity: 1;
+    }
+  }
+
+  @keyframes slideup {
+    from {
+      top: 25%;
+    }
+
+    to {
+      top: 15%;
+    }
+  }
+
+  .undergatesText {
+    display: none;
+  }
+
+  .undergatesButton {
+    position: relative;
+    top: 90%;
+    right: -20%;
+    /* animation: none; */
+    animation: slidebutton 0s forwards 0s, slidebuttonup 1s forwards 2s;
+  }
+
+  @keyframes slidebutton {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+    }
+  }
+
+  @keyframes slidebuttonup {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+  body {
+    background-size: 700% 700%;
+    height: 100%;
+    margin: 0;
   }
 }
 
